[project]
name = "boltzjobs"
version = "0.1.0"
description = "Module for defining molecular components, modifications, and job configurations for Boltz-2"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Karl Gruber", email = "karl.gruber@uni-graz.at"},
]
keywords = ["Boltz-2", "molecular biology", "protein modeling", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

